2014-10-03  David B. Lamkins  <dlamkins@kolvir>

	* edit.c (trim_length, edit_function_cb): Strip trailing blanks
	from function lines.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* edit.c (set_status_line): Correct line count in status line.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* edit.h (struct buffer_s): Removed modified member; we now rely
	upon the GtkTextBuffer's modification query.

	* edit.c (set_status_line, edit_mark_set_event, edit_save_cb)
	(edit_delete_real, edit_key_press_event, edit_function_cb, )
	(edit_object): Line and column numbers are now displayed in origin
	0. Line and column numbers update in sync with cursor movement,
	whether via keyboard or mouse. Edit window opens with cursor at
	<0,0>.

2014-10-01  David Lamkins <david@lamkins.net>

	No file details for 12 patches covering the following fixes:

	1. [lamkins_prompt_cursor_home.patch] Generalize the
	home-to-end-of-prompt behavior for all APL prompts; not just the
	six-space prompt.

	2. [lamkins_output_perror.patch] Correct a bug in error checking
	for the four output routines and add a perror() call to each to
	report unexpected errors.

	3. [lamkins_row_count_tweak.patch] Reduce the view height by its
	borders when calculating the number of full rows in the view.

	4. [lamkins_static_quitting.patch] Scope issue: quitting should
	have been static in apl.c.

	5. [lamkins_io_rework.patch] Fixed handling of EAGAIN in the
	various read() routines. Factored out the common read loops into a
	new reader() routine.

	6. [lamkins_empty_prompt.patch] Fixed an issue that caused an
	empty quote-quad prompt to make APLwrap's input handling
	misbehave.

	7. [lamkins_empty_prompt_2.patch] Restore the second call, removed
	by the previous patch, to mark_input().

	8. [lamkins_completion_reset.patch] Reset the completion marks at
	each prompt. This prevents the jump-to-end-of-completion key (ESC)
	from jumping to the end of a previous completion if no completion